# unsloth-studio

./: README.md  pyproject.toml
colabs/: Llama-3.1 8b finetuning.ipynb  mistral_nemo_12b.ipynb
unsloth_studio/: __init__.py  chat.py  elements.py  evaluation.py  losses.py  saving_utils.py  styles.py  utils.py
unsloth_studio/evaluation/: mmlu.py
unsloth_studio/kernels/loss_functions/: losses.py
unsloth_studio/models/: __init__.py  llama4.py
unsloth_studio/tests/: __init__.py  losses.py
