[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "unsloth_studio"
dynamic = ["version"]
description = "Unsloth Studio"
readme = "README.md"
requires-python = ">=3.9,<=3.13"
license = "AGPL-3.0-or-later"
keywords = ["ai", "llm",]
authors = [
    {email = "info@unsloth.ai"},
    {name = "Unsloth AI team"},
]
maintainers = [
    {name = "Daniel Han", email = "danielhanchen@gmail.com"},
    {name = "Michael Han", email = "info@unsloth.ai"},
]
classifiers = [
    "Programming Language :: Python",
]
dependencies = [
    "torch>=2.4.0",
    "xformers>=0.0.27.post2",
    "bitsandbytes",
    "triton>=3.0.0 ; platform_system == 'Linux'",
    "triton-windows ; platform_system == 'Windows'",
    "packaging",
    "tyro",
    "transformers>=4.46.1,!=4.47.0",
    "datasets>=2.16.0",
    "sentencepiece>=0.2.0",
    "tqdm",
    "psutil",
    "wheel>=0.42.0",
    "numpy",
    "accelerate>=0.34.1",
    "trl>=0.7.9,!=0.9.0,!=0.9.1,!=0.9.2,!=0.9.3,!=0.15.0,<=0.15.2",
    "peft>=0.7.1,!=0.11.0",
    "huggingface_hub",
    "hf_transfer",
    "torchvision",
]

[tool.setuptools.dynamic]
version = {attr = "unsloth_studio.__init__.__version__"}

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
exclude = ["images*", "tests*", "colabs*"]

[project.urls]
homepage = "http://www.unsloth.ai"
documentation = "https://github.com/unslothai/unsloth"
repository = "https://github.com/unslothai/unsloth"
